[project]
name = "ComfyUI_EBU_Workflow"
description = "This ComfyUI extension provides a suite of custom nodes for assisting with your workflow with a focus on resolution, upscaling, and file naming"
version = "1.0.0"
authors = [
    {name = "burnsbert"}
]
keywords = keywords = ["comfyui"]
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/burnsbert/ComfyUI-EBU-Workflow"

[tool.comfy]
PublisherId = "burnsbert"
DisplayName = "ComfyUI-EBU-Workflow"